courses/430_programming-languages/assignment-6/tests/error/hw5_error22.nex
var f : int;

fun g() : none
{
}

fun f() : none
{
}

print "should not get here:n";
1 / 0;
